2005/02/26 Jamal James <teflon114@gmail.com>
* Applied creditloss fix. Thx TDSoul
  See http://www.drftpd.org/phpBB2/viewtopic.php?t=142&p=789#789

2005/02/26 Morgan Christiansson <drftpd@mog.se>
* Critical bug in ID3 gave errors on CWD into directories containing
  MP3 files that have genre ID's that aren't in the ID3GenreList.java
  genre array. The CWD still succeeded even though returning error.
  This prevented me from downloading my drum'n'bass tunes. :'(

2005/02/25 Jamal James <teflon114@gmail.com>
* Applied diff for more zipscript options. Thx TDSoul
  See http://www.drftpd.org/phpBB2/viewtopic.php?t=170
* Added AutoFreeSpace plugin. Thx P
  See http://www.drftpd.org/phpBB2/viewtopic.php?t=57
* Fixed !{al,wk,month,day}{up,dn} irc plugin to output using blowfish

2005/02/23 Jamal James <teflon114@gmail.com>
* Fixed OnConnect
* Possible fix for multiple HALFWAY and COMPLETE SiteBot announcements.

2005/02/21 Jamal James <teflon114@gmail.com>
* Added code to deny MKD of a dir thats already nuked
* Added 2 setings to zipscript.conf
  #only allow files found in the sfv file [true/false]
  sfv.restrict.files=true
  #allow multiple sfv files in one dir [true/false]
  allow.multi.sfv=false
* Fixed TrialSiteBot to recieve decrypted message when using blowfish
* Removed !failed 
* Added User ban support (site ban, site unban, site bans)
* Added setting in irc.conf to set maximum number of racers/groups to announce on COMPLETE (requested by blueprism)

2005/02/13 Matt Zimmerman <zubov@users.sourceforge.net>
* Updated perms.conf.dist to reflect login_prompt and secure(SSL/TLS)
* Login statistics now work properly
* RC2 released

2005/02/12 Jamal James <teflon114@gmail.com>
* Fixed SiteBot bug where it would not respond to any commands after site reload
* Created permissions for irc commands to irc.conf
  This code created a bug which I can't seem to figure out. /me calls upon the mighty mog & zubov